# QTImageEditor

./: CMakeLists.txt  README.md  brush.cpp  brush.h  imagewidget.cpp  imagewidget.h  main.cpp  mainwidget.cpp  mainwidget.h
